Added ebook-frontend document